[package]
name = "libindexfn-s3"
version = "0.1.0"
authors = ["Simon Friedmann <simonf256@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libindexfn = { git = 'https://github.com/five-elephants/libindexfn' }
rusoto_core = { version = "^0.45", default_features = false, features = ["rustls"] }
rusoto_s3 = { version = "^0.45", default_features = false, features = ["rustls"] }
async-trait = "^0.1"
tokio = "^0.2"